k8s/tracing/java/grpc-server-java-1.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: grpc-tracing
  name: grpc-server-svc1
  labels:
    app: grpc-server-svc1
spec:
  ports:
    - port: 7777
      targetPort: 9996
      name: grpc-port
  selector:
    app: grpc-server-deploy1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: grpc-tracing
  name: grpc-server-java-1
  labels:
    app: grpc-server-deploy1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-server-deploy1
  template:
    metadata:
      labels:
        app: grpc-server-deploy1
    spec:
      serviceAccountName: grpc-tracing-sa
      containers:
        - name: grpc-server-deploy1
          image: feuyeux/grpc_server_java:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 9996
              name: grpc-port
